programms/gram.output
Terminals unused in grammar

    T_DOT
    T_EOF


State 21 conflicts: 2 shift/reduce, 1 reduce/reduce
State 27 conflicts: 2 shift/reduce, 1 reduce/reduce
State 30 conflicts: 2 shift/reduce, 1 reduce/reduce
State 31 conflicts: 1 shift/reduce
State 44 conflicts: 2 shift/reduce
State 45 conflicts: 2 shift/reduce
State 46 conflicts: 2 shift/reduce
State 48 conflicts: 2 shift/reduce
State 50 conflicts: 2 shift/reduce
State 52 conflicts: 2 shift/reduce
State 55 conflicts: 2 shift/reduce, 8 reduce/reduce
State 61 conflicts: 2 shift/reduce, 8 reduce/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: %empty
    2      | T_EMPTY_LINE start
    3      | initialization start
    4      | add_edge start
    5      | add_state start

    6 add_edge: spaces T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields

    7 edge_fields: %empty
    8            | T_EMPTY_LINE edge_fields
    9            | edge_field edge_fields

   10 edge_field: T_EMPTY_LINE edge_field
   11           | spaces T_ALLOWED_LETTERS_EDGE_FIELD spaces T_COLON spaces enumeration_list
   12           | spaces T_BEGIN_EDGE_FIELD spaces T_COLON spaces T_VARIABLE spaces
   13           | spaces T_END_EDGE_FIELD spaces T_COLON spaces T_VARIABLE spaces

   14 add_state: spaces T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields

   15 state_fields: %empty
   16             | T_EMPTY_LINE state_fields
   17             | state_field state_fields

   18 state_field: T_EMPTY_LINE state_field
   19            | spaces T_EDGES_STATE_FIELD spaces T_COLON spaces enumeration_list
   20            | spaces T_COMMENT_STATE_FIELD spaces T_COLON spaces T_STRING
   21            | spaces T_IS_TERMINAL_STATE_FIELD spaces T_COLON spaces T_BOOLEAN

   22 initialization: T_INITIALIZATION_VARIABLE spaces enumeration_list

   23 enumeration_list: T_OPEN_CURLY_BRACKET sequence T_CLOSE_CURLY_BRACKET

   24 sequence: %empty
   25         | SPACED_VARIABLE skip_empty_lines
   26         | SPACED_VARIABLE T_COMM sequence
   27         | T_EMPTY_LINE sequence

   28 SPACED_VARIABLE: spaces T_VARIABLE spaces

   29 skip_empty_lines: %empty
   30                 | T_EMPTY_LINE skip_empty_lines
   31                 | spaces skip_empty_lines

   32 spaces: %empty
   33       | T_SPACES


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_NEW (258) 6 14
    T_INITIALIZATION_VARIABLE <str> (259) 22
    T_VARIABLE <str> (260) 12 13 28
    T_STATE (261) 14
    T_EDGES_STATE_FIELD (262) 19
    T_COMMENT_STATE_FIELD (263) 20
    T_IS_TERMINAL_STATE_FIELD (264) 21
    T_EDGE (265) 6
    T_ALLOWED_LETTERS_EDGE_FIELD (266) 11
    T_BEGIN_EDGE_FIELD (267) 12
    T_END_EDGE_FIELD (268) 13
    T_BOOLEAN <str> (269) 21
    T_STRING <str> (270) 20
    T_OPEN_CURLY_BRACKET (271) 23
    T_CLOSE_CURLY_BRACKET (272) 23
    T_OPEN_ROUND_BRACKET (273) 6 14
    T_CLOSE_ROUND_BRACKET (274) 6 14
    T_COLON (275) 6 11 12 13 14 19 20 21
    T_EMPTY_LINE (276) 2 8 10 16 18 27 30
    T_SPACES <str> (277) 33
    T_COMM (278) 26
    T_DOT (279)
    T_EOF <number> (280)


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    start (27)
        on left: 1 2 3 4 5
        on right: 0 2 3 4 5
    add_edge (28)
        on left: 6
        on right: 4
    edge_fields (29)
        on left: 7 8 9
        on right: 6 8 9
    edge_field (30)
        on left: 10 11 12 13
        on right: 9 10
    add_state (31)
        on left: 14
        on right: 5
    state_fields (32)
        on left: 15 16 17
        on right: 14 16 17
    state_field (33)
        on left: 18 19 20 21
        on right: 17 18
    initialization (34)
        on left: 22
        on right: 3
    enumeration_list (35)
        on left: 23
        on right: 11 19 22
    sequence (36)
        on left: 24 25 26 27
        on right: 23 26 27
    SPACED_VARIABLE <str> (37)
        on left: 28
        on right: 6 14 25 26
    skip_empty_lines (38)
        on left: 29 30 31
        on right: 25 30 31
    spaces (39)
        on left: 32 33
        on right: 6 11 12 13 14 19 20 21 22 28 31


State 0

    0 $accept: . start $end

    T_INITIALIZATION_VARIABLE  shift, and go to state 1
    T_EMPTY_LINE               shift, and go to state 2
    T_SPACES                   shift, and go to state 3

    T_NEW     reduce using rule 32 (spaces)
    $default  reduce using rule 1 (start)

    start           go to state 4
    add_edge        go to state 5
    add_state       go to state 6
    initialization  go to state 7
    spaces          go to state 8


State 1

   22 initialization: T_INITIALIZATION_VARIABLE . spaces enumeration_list

    T_SPACES  shift, and go to state 3

    $default  reduce using rule 32 (spaces)

    spaces  go to state 9


State 2

    2 start: T_EMPTY_LINE . start

    T_INITIALIZATION_VARIABLE  shift, and go to state 1
    T_EMPTY_LINE               shift, and go to state 2
    T_SPACES                   shift, and go to state 3

    T_NEW     reduce using rule 32 (spaces)
    $default  reduce using rule 1 (start)

    start           go to state 10
    add_edge        go to state 5
    add_state       go to state 6
    initialization  go to state 7
    spaces          go to state 8


State 3

   33 spaces: T_SPACES .

    $default  reduce using rule 33 (spaces)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    4 start: add_edge . start

    T_INITIALIZATION_VARIABLE  shift, and go to state 1
    T_EMPTY_LINE               shift, and go to state 2
    T_SPACES                   shift, and go to state 3

    T_NEW     reduce using rule 32 (spaces)
    $default  reduce using rule 1 (start)

    start           go to state 12
    add_edge        go to state 5
    add_state       go to state 6
    initialization  go to state 7
    spaces          go to state 8


State 6

    5 start: add_state . start

    T_INITIALIZATION_VARIABLE  shift, and go to state 1
    T_EMPTY_LINE               shift, and go to state 2
    T_SPACES                   shift, and go to state 3

    T_NEW     reduce using rule 32 (spaces)
    $default  reduce using rule 1 (start)

    start           go to state 13
    add_edge        go to state 5
    add_state       go to state 6
    initialization  go to state 7
    spaces          go to state 8


State 7

    3 start: initialization . start

    T_INITIALIZATION_VARIABLE  shift, and go to state 1
    T_EMPTY_LINE               shift, and go to state 2
    T_SPACES                   shift, and go to state 3

    T_NEW     reduce using rule 32 (spaces)
    $default  reduce using rule 1 (start)

    start           go to state 14
    add_edge        go to state 5
    add_state       go to state 6
    initialization  go to state 7
    spaces          go to state 8


State 8

    6 add_edge: spaces . T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields
   14 add_state: spaces . T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields

    T_NEW  shift, and go to state 15


State 9

   22 initialization: T_INITIALIZATION_VARIABLE spaces . enumeration_list

    T_OPEN_CURLY_BRACKET  shift, and go to state 16

    enumeration_list  go to state 17


State 10

    2 start: T_EMPTY_LINE start .

    $default  reduce using rule 2 (start)


State 11

    0 $accept: start $end .

    $default  accept


State 12

    4 start: add_edge start .

    $default  reduce using rule 4 (start)


State 13

    5 start: add_state start .

    $default  reduce using rule 5 (start)


State 14

    3 start: initialization start .

    $default  reduce using rule 3 (start)


State 15

    6 add_edge: spaces T_NEW . spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields
   14 add_state: spaces T_NEW . spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields

    T_SPACES  shift, and go to state 3

    $default  reduce using rule 32 (spaces)

    spaces  go to state 18


State 16

   23 enumeration_list: T_OPEN_CURLY_BRACKET . sequence T_CLOSE_CURLY_BRACKET

    T_EMPTY_LINE  shift, and go to state 19
    T_SPACES      shift, and go to state 3

    T_VARIABLE  reduce using rule 32 (spaces)
    $default    reduce using rule 24 (sequence)

    sequence         go to state 20
    SPACED_VARIABLE  go to state 21
    spaces           go to state 22


State 17

   22 initialization: T_INITIALIZATION_VARIABLE spaces enumeration_list .

    $default  reduce using rule 22 (initialization)


State 18

    6 add_edge: spaces T_NEW spaces . T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields
   14 add_state: spaces T_NEW spaces . T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields

    T_STATE  shift, and go to state 23
    T_EDGE   shift, and go to state 24


State 19

   27 sequence: T_EMPTY_LINE . sequence

    T_EMPTY_LINE  shift, and go to state 19
    T_SPACES      shift, and go to state 3

    T_VARIABLE  reduce using rule 32 (spaces)
    $default    reduce using rule 24 (sequence)

    sequence         go to state 25
    SPACED_VARIABLE  go to state 21
    spaces           go to state 22


State 20

   23 enumeration_list: T_OPEN_CURLY_BRACKET sequence . T_CLOSE_CURLY_BRACKET

    T_CLOSE_CURLY_BRACKET  shift, and go to state 26


State 21

   25 sequence: SPACED_VARIABLE . skip_empty_lines
   26         | SPACED_VARIABLE . T_COMM sequence

    T_EMPTY_LINE  shift, and go to state 27
    T_SPACES      shift, and go to state 3
    T_COMM        shift, and go to state 28

    T_CLOSE_CURLY_BRACKET  reduce using rule 29 (skip_empty_lines)
    T_CLOSE_CURLY_BRACKET  [reduce using rule 32 (spaces)]
    T_EMPTY_LINE           [reduce using rule 32 (spaces)]
    T_SPACES               [reduce using rule 32 (spaces)]
    $default               reduce using rule 29 (skip_empty_lines)

    skip_empty_lines  go to state 29
    spaces            go to state 30


State 22

   28 SPACED_VARIABLE: spaces . T_VARIABLE spaces

    T_VARIABLE  shift, and go to state 31


State 23

   14 add_state: spaces T_NEW spaces T_STATE . T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields

    T_OPEN_ROUND_BRACKET  shift, and go to state 32


State 24

    6 add_edge: spaces T_NEW spaces T_EDGE . T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields

    T_OPEN_ROUND_BRACKET  shift, and go to state 33


State 25

   27 sequence: T_EMPTY_LINE sequence .

    $default  reduce using rule 27 (sequence)


State 26

   23 enumeration_list: T_OPEN_CURLY_BRACKET sequence T_CLOSE_CURLY_BRACKET .

    $default  reduce using rule 23 (enumeration_list)


State 27

   30 skip_empty_lines: T_EMPTY_LINE . skip_empty_lines

    T_EMPTY_LINE  shift, and go to state 27
    T_SPACES      shift, and go to state 3

    T_CLOSE_CURLY_BRACKET  reduce using rule 29 (skip_empty_lines)
    T_CLOSE_CURLY_BRACKET  [reduce using rule 32 (spaces)]
    T_EMPTY_LINE           [reduce using rule 32 (spaces)]
    T_SPACES               [reduce using rule 32 (spaces)]
    $default               reduce using rule 29 (skip_empty_lines)

    skip_empty_lines  go to state 34
    spaces            go to state 30


State 28

   26 sequence: SPACED_VARIABLE T_COMM . sequence

    T_EMPTY_LINE  shift, and go to state 19
    T_SPACES      shift, and go to state 3

    T_VARIABLE  reduce using rule 32 (spaces)
    $default    reduce using rule 24 (sequence)

    sequence         go to state 35
    SPACED_VARIABLE  go to state 21
    spaces           go to state 22


State 29

   25 sequence: SPACED_VARIABLE skip_empty_lines .

    $default  reduce using rule 25 (sequence)


State 30

   31 skip_empty_lines: spaces . skip_empty_lines

    T_EMPTY_LINE  shift, and go to state 27
    T_SPACES      shift, and go to state 3

    T_CLOSE_CURLY_BRACKET  reduce using rule 29 (skip_empty_lines)
    T_CLOSE_CURLY_BRACKET  [reduce using rule 32 (spaces)]
    T_EMPTY_LINE           [reduce using rule 32 (spaces)]
    T_SPACES               [reduce using rule 32 (spaces)]
    $default               reduce using rule 29 (skip_empty_lines)

    skip_empty_lines  go to state 36
    spaces            go to state 30


State 31

   28 SPACED_VARIABLE: spaces T_VARIABLE . spaces

    T_SPACES  shift, and go to state 3

    T_SPACES  [reduce using rule 32 (spaces)]
    $default  reduce using rule 32 (spaces)

    spaces  go to state 37


State 32

   14 add_state: spaces T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET . SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields

    T_SPACES  shift, and go to state 3

    $default  reduce using rule 32 (spaces)

    SPACED_VARIABLE  go to state 38
    spaces           go to state 22


State 33

    6 add_edge: spaces T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET . SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields

    T_SPACES  shift, and go to state 3

    $default  reduce using rule 32 (spaces)

    SPACED_VARIABLE  go to state 39
    spaces           go to state 22


State 34

   30 skip_empty_lines: T_EMPTY_LINE skip_empty_lines .

    $default  reduce using rule 30 (skip_empty_lines)


State 35

   26 sequence: SPACED_VARIABLE T_COMM sequence .

    $default  reduce using rule 26 (sequence)


State 36

   31 skip_empty_lines: spaces skip_empty_lines .

    $default  reduce using rule 31 (skip_empty_lines)


State 37

   28 SPACED_VARIABLE: spaces T_VARIABLE spaces .

    $default  reduce using rule 28 (SPACED_VARIABLE)


State 38

   14 add_state: spaces T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE . T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields

    T_CLOSE_ROUND_BRACKET  shift, and go to state 40


State 39

    6 add_edge: spaces T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE . T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields

    T_CLOSE_ROUND_BRACKET  shift, and go to state 41


State 40

   14 add_state: spaces T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET . spaces T_COLON state_fields

    T_SPACES  shift, and go to state 3

    $default  reduce using rule 32 (spaces)

    spaces  go to state 42


State 41

    6 add_edge: spaces T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET . spaces T_COLON edge_fields

    T_SPACES  shift, and go to state 3

    $default  reduce using rule 32 (spaces)

    spaces  go to state 43


State 42

   14 add_state: spaces T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces . T_COLON state_fields

    T_COLON  shift, and go to state 44


State 43

    6 add_edge: spaces T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces . T_COLON edge_fields

    T_COLON  shift, and go to state 45


State 44

   14 add_state: spaces T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON . state_fields

    T_EMPTY_LINE  shift, and go to state 46
    T_SPACES      shift, and go to state 3

    T_EDGES_STATE_FIELD        reduce using rule 32 (spaces)
    T_COMMENT_STATE_FIELD      reduce using rule 32 (spaces)
    T_IS_TERMINAL_STATE_FIELD  reduce using rule 32 (spaces)
    T_EMPTY_LINE               [reduce using rule 15 (state_fields)]
    T_SPACES                   [reduce using rule 15 (state_fields)]
    $default                   reduce using rule 15 (state_fields)

    state_fields  go to state 47
    state_field   go to state 48
    spaces        go to state 49


State 45

    6 add_edge: spaces T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON . edge_fields

    T_EMPTY_LINE  shift, and go to state 50
    T_SPACES      shift, and go to state 3

    T_ALLOWED_LETTERS_EDGE_FIELD  reduce using rule 32 (spaces)
    T_BEGIN_EDGE_FIELD            reduce using rule 32 (spaces)
    T_END_EDGE_FIELD              reduce using rule 32 (spaces)
    T_EMPTY_LINE                  [reduce using rule 7 (edge_fields)]
    T_SPACES                      [reduce using rule 7 (edge_fields)]
    $default                      reduce using rule 7 (edge_fields)

    edge_fields  go to state 51
    edge_field   go to state 52
    spaces       go to state 53


State 46

   16 state_fields: T_EMPTY_LINE . state_fields
   18 state_field: T_EMPTY_LINE . state_field

    T_EMPTY_LINE  shift, and go to state 46
    T_SPACES      shift, and go to state 3

    T_EDGES_STATE_FIELD        reduce using rule 32 (spaces)
    T_COMMENT_STATE_FIELD      reduce using rule 32 (spaces)
    T_IS_TERMINAL_STATE_FIELD  reduce using rule 32 (spaces)
    T_EMPTY_LINE               [reduce using rule 15 (state_fields)]
    T_SPACES                   [reduce using rule 15 (state_fields)]
    $default                   reduce using rule 15 (state_fields)

    state_fields  go to state 54
    state_field   go to state 55
    spaces        go to state 49


State 47

   14 add_state: spaces T_NEW spaces T_STATE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON state_fields .

    $default  reduce using rule 14 (add_state)


State 48

   17 state_fields: state_field . state_fields

    T_EMPTY_LINE  shift, and go to state 46
    T_SPACES      shift, and go to state 3

    T_EDGES_STATE_FIELD        reduce using rule 32 (spaces)
    T_COMMENT_STATE_FIELD      reduce using rule 32 (spaces)
    T_IS_TERMINAL_STATE_FIELD  reduce using rule 32 (spaces)
    T_EMPTY_LINE               [reduce using rule 15 (state_fields)]
    T_SPACES                   [reduce using rule 15 (state_fields)]
    $default                   reduce using rule 15 (state_fields)

    state_fields  go to state 56
    state_field   go to state 48
    spaces        go to state 49


State 49

   19 state_field: spaces . T_EDGES_STATE_FIELD spaces T_COLON spaces enumeration_list
   20            | spaces . T_COMMENT_STATE_FIELD spaces T_COLON spaces T_STRING
   21            | spaces . T_IS_TERMINAL_STATE_FIELD spaces T_COLON spaces T_BOOLEAN

    T_EDGES_STATE_FIELD        shift, and go to state 57
    T_COMMENT_STATE_FIELD      shift, and go to state 58
    T_IS_TERMINAL_STATE_FIELD  shift, and go to state 59


State 50

    8 edge_fields: T_EMPTY_LINE . edge_fields
   10 edge_field: T_EMPTY_LINE . edge_field

    T_EMPTY_LINE  shift, and go to state 50
    T_SPACES      shift, and go to state 3

    T_ALLOWED_LETTERS_EDGE_FIELD  reduce using rule 32 (spaces)
    T_BEGIN_EDGE_FIELD            reduce using rule 32 (spaces)
    T_END_EDGE_FIELD              reduce using rule 32 (spaces)
    T_EMPTY_LINE                  [reduce using rule 7 (edge_fields)]
    T_SPACES                      [reduce using rule 7 (edge_fields)]
    $default                      reduce using rule 7 (edge_fields)

    edge_fields  go to state 60
    edge_field   go to state 61
    spaces       go to state 53


State 51

    6 add_edge: spaces T_NEW spaces T_EDGE T_OPEN_ROUND_BRACKET SPACED_VARIABLE T_CLOSE_ROUND_BRACKET spaces T_COLON edge_fields .

    $default  reduce using rule 6 (add_edge)


State 52

    9 edge_fields: edge_field . edge_fields

    T_EMPTY_LINE  shift, and go to state 50
    T_SPACES      shift, and go to state 3

    T_ALLOWED_LETTERS_EDGE_FIELD  reduce using rule 32 (spaces)
    T_BEGIN_EDGE_FIELD            reduce using rule 32 (spaces)
    T_END_EDGE_FIELD              reduce using rule 32 (spaces)
    T_EMPTY_LINE                  [reduce using rule 7 (edge_fields)]
    T_SPACES                      [reduce using rule 7 (edge_fields)]
    $default                      reduce using rule 7 (edge_fields)

    edge_fields  go to state 62
    edge_field   go to state 52
    spaces       go to state 53


State 53

   11 edge_field: spaces . T_ALLOWED_LETTERS_EDGE_FIELD spaces T_COLON spaces enumeration_list
   12           | spaces . T_BEGIN_EDGE_FIELD spaces T_COLON spaces T_VARIABLE spaces
   13           | spaces . T_END_EDGE_FIELD spaces T_COLON spaces T_VARIABLE spaces

    T_ALLOWED_LETTERS_EDGE_FIELD  shift, and go to state 63
    T_BEGIN_EDGE_FIELD            shift, and go to state 64
    T_END_EDGE_FIELD              shift, and go to state 65


State 54

   16 state_fields: T_EMPTY_LINE state_fields .

    $default  reduce using rule 16 (state_fields)


State 55

   17 state_fields: state_field . state_fields
   18 state_field: T_EMPTY_LINE state_field .

    T_EMPTY_LINE  shift, and go to state 46
    T_SPACES      shift, and go to state 3
